--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -134,8 +134,7 @@
         width: 3px;
         background-color: var(--color-primary);
         transform: scaleY(0);
-        transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s,
-            background-color 0.1s;
+        transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s;
     }
 
     &__item:hover::before,
@@ -176,4 +175,317 @@
     text-align: center;
     padding: 2.5rem;
     color: var(--color-grey-light-4);
+}
+
+// GALLERY
+
+.gallery {
+    display: flex;
+
+    &__item {
+    }
+
+    &__photo {
+        width: 100%;
+        display: block;
+    }
+}
+
+// OVERVIEW
+
+.overview {
+    display: flex;
+    align-items: center;
+    border-bottom: var(--line);
+
+    &__heading {
+        font-size: 2.25rem;
+        font-weight: 300;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+        padding: 1.5rem 3rem;
+    }
+
+    &__stars {
+        margin-right: auto;
+        display: flex;
+    }
+
+    &__icon-star,
+    &__icon-location {
+        width: 1.75rem;
+        height: 1.75rem;
+        fill: var(--color-primary);
+    }
+
+    &__location {
+        display: flex;
+        align-items: center;
+        font-size: 1.2rem;
+    }
+
+    &__icon-location {
+        margin-right: 0.5rem;
+    }
+
+    &__rating {
+        background-color: var(--color-primary);
+        color: #fff;
+        padding: 0 2.25rem;
+        margin-left: 3rem;
+        align-self: stretch;
+
+        @include flexCenter;
+        flex-direction: column;
+    }
+
+    &__rating-average {
+        font-size: 2.25rem;
+        font-weight: 300;
+        margin-bottom: -3px;
+    }
+
+    &__rating-count {
+        font-size: 0.8rem;
+        text-transform: uppercase;
+    }
+}
+
+// BUTTON
+
+.btn-inline {
+    font-size: inherit;
+    border: none;
+    color: var(--color-primary);
+    border-bottom: 1px solid currentColor;
+    padding-bottom: 2px;
+    display: inline-block;
+    background-color: transparent;
+    cursor: pointer;
+    transition: all 0.2s;
+
+    span {
+        margin-left: 3px;
+        transition: margin-left 0.2s;
+    }
+
+    &:hover {
+        color: var(--color-grey-dark-1);
+
+        span {
+            margin-left: 8px;
+        }
+    }
+
+    &:focus {
+        outline: none;
+        animation: pulsate 1s infinite;
+    }
+}
+
+@keyframes pulsate {
+    0% {
+        transform: scale(1);
+        box-shadow: none;
+    }
+
+    50% {
+        transform: scale(1.1);
+        box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.2);
+    }
+
+    100% {
+        transform: scale(1);
+        box-shadow: none;
+    }
+}
+
+// PARAGRAPH
+
+.paragraph {
+    &:not(:last-of-type) {
+        margin-bottom: 2rem;
+    }
+}
+
+// LIST
+
+.list {
+    display: flex;
+    flex-wrap: wrap;
+
+    list-style: none;
+    margin: 3rem 0;
+    padding: 3rem 0;
+    border-top: var(--line);
+    border-bottom: var(--line);
+
+    &__item {
+        flex: 0 0 50%;
+        margin-bottom: 1.5rem;
+    }
+
+    &__item::before {
+        content: '';
+        display: inline-block;
+        width: 1rem;
+        height: 1rem;
+        margin-right: 0.7rem;
+
+        // Older browsers
+        //background-image: url(../img/chevron-thin-right.svg);
+        //background-size: cover;
+
+        // Newer browsers
+        background-color: var(--color-primary);
+        -webkit-mask: url(../img/chevron-thin-right.svg);
+        -webkit-mask-size: cover;
+        mask-image: url(../img/chevron-thin-right.svg);
+        mask-size: cover;
+    }
+}
+
+// RECOMMEND
+
+.recommend {
+    display: flex;
+    align-items: center;
+    font-size: 1.3rem;
+    color: var(--color-grey-dark-3);
+
+    &__count {
+        margin-right: auto;
+    }
+
+    &__photo {
+        width: 4rem;
+        height: 4rem;
+        border-radius: 50%;
+        outline: 3px solid #fff;
+
+        &:not(:last-child) {
+            margin-right: -1.75rem;
+        }
+    }
+}
+
+// REVIEW
+
+.review {
+    background-color: #fff;
+    padding: 3rem;
+    margin-bottom: 3.5rem;
+    box-shadow: var(--shadow-light);
+    display: block;
+    position: relative;
+    overflow: hidden;
+
+    &__text {
+        margin-bottom: 2rem;
+        position: relative;
+        z-index: 10;
+    }
+
+    &__user {
+        display: flex;
+        align-items: center;
+    }
+
+    &__photo {
+        width: 4.5rem;
+        height: 4.5rem;
+        border-radius: 50%;
+    }
+
+    &__user-box {
+        margin-right: auto;
+        margin-left: 1.5rem;
+    }
+
+    &__user-name {
+        font-weight: 600;
+        text-transform: uppercase;
+    }
+
+    &__user-data {
+        font-size: 1.2rem;
+        color: var(--color-grey-dark-1);
+    }
+
+    &__rating {
+        font-size: 2rem;
+        color: var(--color-primary);
+    }
+
+    &::before {
+        content: '\201C';
+        position: absolute;
+        top: -2.75rem;
+        left: -1rem;
+        line-height: 1;
+        font-size: 20rem;
+        color: var(--color-grey-light-2);
+        font-family: sans-serif;
+        z-index: 1;
+    }
+}
+
+// CALL TO ACTION
+
+.cta {
+    padding: 3.5rem 0;
+    text-align: center;
+
+    &__booking-now {
+        font-size: 2rem;
+        font-weight: 300;
+        text-transform: uppercase;
+        margin-bottom: 2.5rem;
+    }
+}
+
+.btn {
+    background-image: linear-gradient(to right, var(--color-primary-light), var(--color-primary-dark));
+    border: none;
+    border-radius: 100px;
+    color: var(--color-grey-light-1);
+    text-transform: uppercase;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+
+    & > * {
+        display: inline-block;
+        width: 100%;
+        height: 100%;
+        transition: all 0.2s;
+    }
+
+    &__visible {
+        padding: 2rem 7.5rem;
+    }
+
+    &__invisible {
+        padding: 2rem;
+        position: absolute;
+        top: -100%;
+        left: 0;
+    }
+
+    &:hover {
+        background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark));
+    }
+
+    &:hover &__visible {
+        transform: translateY(100%);
+    }
+
+    &:hover &__invisible {
+        top: 0;
+    }
+
+    &:focus {
+        outline: none;
+        animation: pulsate 1s infinite;
+    }
 }
