--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -11,7 +11,7 @@
     font-size: 1.4rem;
     height: 7rem;
     background-color: #fff;
-    border-bottom: var(--color-grey-light-2);
+    border-bottom: var(--line);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -30,7 +30,28 @@
 }
 
 .hotel-view {
-    height: 80rem;
-    background-color: orangered;
     flex: 1;
+}
+
+.detail {
+    display: flex;
+    padding: 4.5rem;
+    font-size: 1.4rem;
+    background-color: var(--color-grey-light-2);
+    border-bottom: var(--line);
+}
+
+.description {
+    flex: 0 0 60%;
+    padding: 3rem;
+    margin-right: 4.5rem;
+    background: #fff;
+    box-shadow: var(--shadow-light);
+}
+
+.user-reviews {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
