--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -17,6 +17,10 @@
     --line: 1px solid var(--color-grey-light-2);
 }
 
+$bg-largest: 75em; // 1200px
+$bg-large: 68.75em; // 1100px
+$bg-medium: 56.25em; // 900px
+
 * {
     margin: 0;
     padding: 0;
@@ -25,6 +29,10 @@
 
 html {
     font-size: 62.5%; // 1rem = 10px, 10px / 16px = 62.5%
+
+    @media only screen and (max-width: $bg-large) {
+        font-size: 50%;
+    }
 }
 
 body {
@@ -32,11 +40,7 @@ body {
     font-weight: 400;
     line-height: 1.6;
     color: var(--color-grey-dark-2);
-    background-image: linear-gradient(
-        to right bottom,
-        var(--color-primary-light),
-        var(--color-primary-dark)
-    );
+    background-image: linear-gradient(to right bottom, var(--color-primary-light), var(--color-primary-dark));
     background-size: cover;
     background-repeat: no-repeat;
     min-height: 100vh;
