--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -117,11 +117,25 @@
     list-style: none;
     margin-top: 3.5rem;
 
+    @media only screen and (max-width: $bg-medium) {
+        display: flex;
+        align-items: center;
+        margin: 0;
+    }
+
     &__item {
         position: relative;
 
         &:not(:last-child) {
             margin-bottom: 0.5rem;
+
+            @media only screen and (max-width: $bg-medium) {
+                margin-bottom: 0;
+            }
+        }
+
+        @media only screen and (max-width: $bg-medium) {
+            flex: 1;
         }
     }
 
@@ -159,6 +173,11 @@
 
         display: flex;
         align-items: center;
+
+        @media only screen and (max-width: $bg-medium) {
+            justify-content: center;
+            padding: 2rem;
+        }
     }
 
     &__icon {
@@ -175,6 +194,10 @@
     text-align: center;
     padding: 2.5rem;
     color: var(--color-grey-light-4);
+
+    @media only screen and (max-width: $bg-medium) {
+        display: none;
+    }
 }
 
 // GALLERY
@@ -357,14 +380,19 @@
         margin-right: auto;
     }
 
+    &__friends {
+        display: flex;
+    }
+
     &__photo {
+        box-sizing: content-box;
         width: 4rem;
         height: 4rem;
         border-radius: 50%;
-        outline: 3px solid #fff;
+        border: 3px solid #fff;
 
         &:not(:last-child) {
-            margin-right: -1.75rem;
+            margin-right: -2rem;
         }
     }
 }
@@ -379,6 +407,11 @@
     display: block;
     position: relative;
     overflow: hidden;
+
+    @media only screen and (max-width: $bg-medium) {
+        padding: 2rem;
+        margin-bottom: 3rem;
+    }
 
     &__text {
         margin-bottom: 2rem;
@@ -435,6 +468,10 @@
 .cta {
     padding: 3.5rem 0;
     text-align: center;
+
+    @media only screen and (max-width: $bg-medium) {
+        padding: 2.5rem 0;
+    }
 
     &__booking-now {
         font-size: 2rem;
