--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -5,6 +5,12 @@
     box-shadow: var(--shadow-dark);
 
     min-height: 50rem;
+
+    @media only screen and (max-width: $bg-largest) {
+        margin: 0;
+        max-width: 100%;
+        width: 100%;
+    }
 }
 
 .header {
@@ -19,6 +25,10 @@
 
 .content {
     display: flex;
+
+    @media only screen and (max-width: $bg-medium) {
+        flex-direction: column;
+    }
 }
 
 .sidebar {
@@ -39,6 +49,10 @@
     font-size: 1.4rem;
     background-color: var(--color-grey-light-2);
     border-bottom: var(--line);
+
+    @media only screen and (max-width: $bg-medium) {
+        padding: 3rem;
+    }
 }
 
 .description {
@@ -47,6 +61,11 @@
     margin-right: 4.5rem;
     background: #fff;
     box-shadow: var(--shadow-light);
+
+    @media only screen and (max-width: $bg-medium) {
+        padding: 2rem;
+        margin-right: 3rem;
+    }
 }
 
 .user-reviews {
