--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -20,6 +20,8 @@
 $bg-largest: 75em; // 1200px
 $bg-large: 68.75em; // 1100px
 $bg-medium: 56.25em; // 900px
+$bg-small: 37.5em; // 600px
+$bg-smallest: 31.25em; // 500px
 
 * {
     margin: 0;
