--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -21,6 +21,12 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @media only screen and (max-width: $bg-smallest) {
+        flex-wrap: wrap;
+        height: 11rem;
+        align-content: space-around;
+    }
 }
 
 .content {
@@ -53,6 +59,10 @@
     @media only screen and (max-width: $bg-medium) {
         padding: 3rem;
     }
+
+    @media only screen and (max-width: $bg-small) {
+        flex-direction: column;
+    }
 }
 
 .description {
@@ -65,6 +75,11 @@
     @media only screen and (max-width: $bg-medium) {
         padding: 2rem;
         margin-right: 3rem;
+    }
+
+    @media only screen and (max-width: $bg-small) {
+        margin-right: 0;
+        margin-bottom: 3rem;
     }
 }
 
