--- a/css/style.css
+++ b/css/style.css
@@ -233,7 +233,8 @@ body {
     flex-direction: column; }
     @media only screen and (max-width: 37.5em) {
       .overview__rating {
-        padding: 0 1.5rem; } }
+        padding: 0 1.5rem;
+        flex-direction: row; } }
   .overview__rating-average {
     font-size: 2.25rem;
     font-weight: 300;
@@ -246,7 +247,11 @@ body {
     text-transform: uppercase; }
     @media only screen and (max-width: 37.5em) {
       .overview__rating-count {
-        font-size: 0.5rem; } }
+        font-size: 1rem;
+        border-left: 1px solid #fff;
+        padding-left: 1rem;
+        margin-left: 1rem;
+        white-space: nowrap; } }
 
 .btn-inline {
   font-size: inherit;
