--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -283,6 +283,7 @@
 
         @media only screen and (max-width: $bg-small) {
             padding: 0 1.5rem;
+            flex-direction: row;
         }
     }
 
@@ -301,7 +302,11 @@
         text-transform: uppercase;
 
         @media only screen and (max-width: $bg-small) {
-            font-size: 0.5rem;
+            font-size: 1rem;
+            border-left: 1px solid #fff;
+            padding-left: 1rem;
+            margin-left: 1rem;
+            white-space: nowrap;
         }
     }
 }
